--- a/install.txt
+++ b/install.txt
@@ -1,14 +1,26 @@
 agregando la configuracion para eww:
 
+actualizamos sistema
+sudo pacman -Syyu
+
 sudo pacman -S --needed git base-devel && git clone https://aur.archlinux.org/yay.git && cd yay && makepkg -si
 
 
+
+sudo pacman -S hyprland
+sudo pacman -S sddm
+sudo pacman -S kitty
 sudo pacman -S playerctl jq
+
 
 
 yay -S eww
 
 yay -S waybar
+
+yay -S rofi
+
+
 
 yay -S hyprshot
 
@@ -22,45 +34,48 @@ yay -S swww
 
 sudo pacman -S blueman
 
-sudo pacman -S git base-devel \
-  layer-shell-qt layer-shell-qt5 \
-  qt5-base qt5-declarative qt5-graphicaleffects qt5-quickcontrols2 qt5-wayland
-
-cd ~
-git clone https://github.com/HyDE-Project/sddm-hyprland
-cd sddm-hyprland
-sudo make install
-
-sudo mkdir -p /etc/sddm.conf.d/hypr
-sudo nano /etc/sddm.conf.d/hypr/sddm-hyprland.conf
 
 
 
-# SDDM Wayland sobre Hyprland (greeter)
 
-[Theme]
-CursorTheme=Bibata-Modern-Ice
-CursorSize=24
+sudo pacman -S plymouth
 
-[General]
-# SDDM en Wayland
-DisplayServer=wayland
-GreeterEnvironment=QT_WAYLAND_SHELL_INTEGRATION=layer-shell
-HaltCommand=/usr/bin/systemctl poweroff
-RebootCommand=/usr/bin/systemctl reboot
-Numlock=on
+1. Asegura el hook plymouth en mkinitcpio.conf
 
-[Wayland]
-# Hyprland especial de SDDM
-CompositorCommand=Hyprland -c /usr/share/hyde/sddm/hyprland.conf
-EnableHiDPI=true
+sudo nano /etc/mkinitcpio.conf
 
-[X11]
-Enable=false
+Busca la línea HOOKS= y déjala así:
+
+HOOKS=(base udev plymouth autodetect microcode modconf kms keyboard keymap consolefont block filesystems fsck)
+
+Guarda y regenera el initramfs:
+
+sudo mkinitcpio -P
+
+2. Editar la entrada normal de systemd-boot
+
+sudo nano /boot/loader/entries/"nombre de tu archivo"
+
+Cambios clave:
+
+Añadimos initrd /intel-ucode.img (microcode de Intel).
+
+En la línea de options añadimos quiet splash al final.
+
+4. (Opcional) loader.conf un poco mejor
+Si quieres menú y dejar marcada esa entrada por defecto:
+sudo nano /boot/loader/loader.conf
+Y lo dejas:
+
+default 2025-11-18_04-31-22_linux.conf (aca va el nombre de tu archivo)
+timeout 3
+console-mode keep
 
 
-sudo nano /etc/sddm.conf.d/00-default.conf
+sudo plymouth-set-default-theme -l          # ver temas
+sudo plymouth-set-default-theme -R script  # por ejemplo
 
-[Theme]
-Current=breeze
+
+
+
 
